# netbox-test-plugin

./: README.md  pyproject.toml
netbox_test/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_test/api/: serializers.py  urls.py  views.py
netbox_test/migrations/: 0001_initial.py
netbox_test/templates/netbox_test/: testnameserver.html  testzone.html
