[tool.poetry]
name = "netbox-test"
version = "0.0.1"
description = "Test plugin for NetBox issues"
authors = ["Peter Eckel <pete@netbox-dns.org>"]
repository = "https://github.com/peteeckel/netbox-test"
license = "MIT"
readme = "README.md"
packages = [{include = "netbox_test"}]
keywords = ["netbox", "netbox-plugin", "test"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
